@@ -40,9 +40,9 @@ class VoltageLevelCreationTest extends AbstractNetworkModificationTest {
 
     @Override
     protected ModificationInfos buildModification() {
-        VoltageLevelCreationInfos voltageLevel = ModificationCreation.getCreationVoltageLevel("s2", "vlId", "vlName");
-        voltageLevel.setProperties(List.of(FreePropertyInfos.builder().name(PROPERTY_NAME).value(PROPERTY_VALUE).build()));
-        return voltageLevel;
+        VoltageLevelCreationInfos voltageLevelInfos = ModificationCreation.getCreationVoltageLevel("s2", "vlId", "vlName");
+        voltageLevelInfos.setProperties(List.of(FreePropertyInfos.builder().name(PROPERTY_NAME).value(PROPERTY_VALUE).build()));
+        return voltageLevelInfos;
     }
 
     @Override
@@ -59,53 +59,80 @@ class VoltageLevelCreationTest extends AbstractNetworkModificationTest {
 
     @Override
     protected void checkModification() {
+        Network network = getNetwork();
         VoltageLevelCreationInfos vli = (VoltageLevelCreationInfos) buildModification();
         vli.setSubstationId("absent_station");
 
-        Exception exception = assertThrows(NetworkModificationException.class, () -> vli.toModification().apply(getNetwork()));
+        VoltageLevelCreation voltageLevelCreation = (VoltageLevelCreation) vli.toModification();
+        Exception exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation.apply(network));
         assertEquals(new NetworkModificationException(SUBSTATION_NOT_FOUND, "absent_station").getMessage(),
                 exception.getMessage());
 
         VoltageLevelCreationInfos vli1 = (VoltageLevelCreationInfos) buildModification();
-        vli1.getCouplingDevices().get(0).setBusbarSectionId1("1.1");
-        vli1.getCouplingDevices().get(0).setBusbarSectionId2("1.1");
-        exception = assertThrows(NetworkModificationException.class, () -> vli1.toModification().check(getNetwork()));
+        vli1.getCouplingDevices().getFirst().setBusbarSectionId1("1.1");
+        vli1.getCouplingDevices().getFirst().setBusbarSectionId2("1.1");
+        VoltageLevelCreation voltageLevelCreation1 = (VoltageLevelCreation) vli1.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation1.check(network));
         assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, "Coupling between same bus bar section is not allowed").getMessage(),
                 exception.getMessage());
 
         VoltageLevelCreationInfos vli2 = (VoltageLevelCreationInfos) buildModification();
         vli2.setIpMin(0.0);
         vli2.setIpMax(null);
-        exception = assertThrows(NetworkModificationException.class, () -> vli2.toModification().check(getNetwork()));
+        VoltageLevelCreation voltageLevelCreation2 = (VoltageLevelCreation) vli2.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation2.check(network));
         assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, "IpMax is required").getMessage(),
                 exception.getMessage());
 
         // try to create an existing VL
         VoltageLevelCreationInfos vli3 = (VoltageLevelCreationInfos) buildModification();
         vli3.setEquipmentId("v1");
-        exception = assertThrows(NetworkModificationException.class, () -> vli3.toModification().check(getNetwork()));
+        VoltageLevelCreation voltageLevelCreation3 = (VoltageLevelCreation) vli3.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation3.check(network));
         assertEquals(new NetworkModificationException(VOLTAGE_LEVEL_ALREADY_EXISTS, "v1").getMessage(),
                 exception.getMessage());
+
+        // check values
+        VoltageLevelCreationInfos vli4 = (VoltageLevelCreationInfos) buildModification();
+        vli4.setNominalV(-400);
+        VoltageLevelCreation voltageLevelCreation4 = (VoltageLevelCreation) vli4.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation4.check(network));
+        assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, "Voltage level 'vlId' : can not have a negative value for Nominal Voltage").getMessage(),
+            exception.getMessage());
+
+        VoltageLevelCreationInfos vli5 = (VoltageLevelCreationInfos) buildModification();
+        vli5.setLowVoltageLimit(-100d);
+        VoltageLevelCreation voltageLevelCreation5 = (VoltageLevelCreation) vli5.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation5.check(network));
+        assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, "Voltage level 'vlId' : can not have a negative value for Low voltage limit").getMessage(),
+            exception.getMessage());
+
+        VoltageLevelCreationInfos vli6 = (VoltageLevelCreationInfos) buildModification();
+        vli6.setHighVoltageLimit(-50d);
+        VoltageLevelCreation voltageLevelCreation6 = (VoltageLevelCreation) vli6.toModification();
+        exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation6.check(network));
+        assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, "Voltage level 'vlId' : can not have a negative value for High voltage limit").getMessage(),
+            exception.getMessage());
     }
 
     @Test
-    void testCreateWithBbsNotExist() throws Exception {
+    void testCreateWithBbsNotExist() {
         VoltageLevelCreationInfos vli = (VoltageLevelCreationInfos) buildModification();
         vli.setEquipmentId("vl_1");
-        vli.getCouplingDevices().get(0).setBusbarSectionId1("1.1");
-        vli.getCouplingDevices().get(0).setBusbarSectionId2("bbs");
+        vli.getCouplingDevices().getFirst().setBusbarSectionId1("1.1");
+        vli.getCouplingDevices().getFirst().setBusbarSectionId2("bbs");
         vli.toModification().apply(getNetwork());
         assertNotNull(getNetwork().getVoltageLevel("vl_1"));
 
         vli.setEquipmentId("vl_2");
-        vli.getCouplingDevices().get(0).setBusbarSectionId1("bbs");
-        vli.getCouplingDevices().get(0).setBusbarSectionId2("1.1");
+        vli.getCouplingDevices().getFirst().setBusbarSectionId1("bbs");
+        vli.getCouplingDevices().getFirst().setBusbarSectionId2("1.1");
         vli.toModification().apply(getNetwork());
         assertNotNull(getNetwork().getVoltageLevel("vl_2"));
     }
 
     @Test
-    void testCreateWithSubstationCreation() throws Exception {
+    void testCreateWithSubstationCreation() {
         SubstationCreationInfos substationCreationInfos = SubstationCreationInfos.builder()
                 .stashed(false)
                 .equipmentId("newSubstationId")
@@ -125,7 +152,7 @@ class VoltageLevelCreationTest extends AbstractNetworkModificationTest {
     }
 
     @Test
-    void testIpMinEqualsIpMax() throws Exception {
+    void testIpMinEqualsIpMax() {
         VoltageLevelCreationInfos vli = (VoltageLevelCreationInfos) buildModification();
         vli.setEquipmentId("vl_ok");
         vli.setIpMin(25.0);
@@ -136,7 +163,7 @@ class VoltageLevelCreationTest extends AbstractNetworkModificationTest {
     }
 
     @Test
-    void testCreateWithIpMinNull() throws Exception {
+    void testCreateWithIpMinNull() {
         VoltageLevelCreationInfos vli = (VoltageLevelCreationInfos) buildModification();
         vli.setEquipmentId("vl_ok");
         vli.setIpMin(null);
@@ -146,29 +173,31 @@ class VoltageLevelCreationTest extends AbstractNetworkModificationTest {
         assertNotNull(getNetwork().getVoltageLevel("vl_ok"));
     }
 
-    private void testIccWithError(Double ipMin, Double ipMax, String reportError) throws Exception {
+    private void testIccWithError(Double ipMin, Double ipMax, String reportError) {
         VoltageLevelCreationInfos vli = (VoltageLevelCreationInfos) buildModification();
         vli.setEquipmentId("vl_ko");
         vli.setIpMin(ipMin);
         vli.setIpMax(ipMax);
-        NetworkModificationException exception = assertThrows(NetworkModificationException.class, () -> vli.toModification().check(getNetwork()));
+        Network network = getNetwork();
+        VoltageLevelCreation voltageLevelCreation = (VoltageLevelCreation) vli.toModification();
+        NetworkModificationException exception = assertThrows(NetworkModificationException.class, () -> voltageLevelCreation.check(network));
         // VL could not have been created
         assertNull(getNetwork().getVoltageLevel("vl_ko"));
         assertEquals(new NetworkModificationException(CREATE_VOLTAGE_LEVEL_ERROR, reportError).getMessage(), exception.getMessage());
     }
 
     @Test
-    void testIpMinGreaterThanIpMax() throws Exception {
+    void testIpMinGreaterThanIpMax() {
         testIccWithError(15.1, 15.0, "IpMin cannot be greater than IpMax");
     }
 
     @Test
-    void testIpMinNegative() throws Exception {
+    void testIpMinNegative() {
         testIccWithError(-25.0, 15.0, "IpMin must be positive");
     }
 
     @Test
-    void testIpMaxNegative() throws Exception {
+    void testIpMaxNegative() {
         testIccWithError(25.0, -15.0, "IpMax must be positive");
     }
 
